# cppspec

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  _config.yml  appveyor.yml  index.md  mkdocs.yml
.github/workflows/: doxygen.yml  test.yml
_includes/: footer.html  navigation.html
_layouts/: default.html
assets/css/: highlight.css  style.css
docs/: index.md  testing.md
docs/syntax/: before_after.md  describe.md  expect.md  it.md  let.md  matchers.md
doxygen/: annotated.html  annotated_dup.js  argparse_8hpp_source.html  be__between_8hpp.html  be__between_8hpp.js  be__between_8hpp__dep__incl.map  be__between_8hpp__dep__incl.md5  be__between_8hpp__incl.map  be__between_8hpp__incl.md5  be__between_8hpp_source.html  be__greater__than_8hpp.html  be__greater__than_8hpp.js  be__greater__than_8hpp__dep__incl.map  be__greater__than_8hpp__dep__incl.md5  be__greater__than_8hpp__incl.map  be__greater__than_8hpp__incl.md5  be__greater__than_8hpp_source.html  be__less__than_8hpp.html  be__less__than_8hpp.js  be__less__than_8hpp__dep__incl.map  be__less__than_8hpp__dep__incl.md5  be__less__than_8hpp__incl.map  be__less__than_8hpp__incl.md5  be__less__than_8hpp_source.html  be__nullptr_8hpp.html  be__nullptr_8hpp.js  be__nullptr_8hpp__dep__incl.map  be__nullptr_8hpp__dep__incl.md5  be__nullptr_8hpp__incl.map  be__nullptr_8hpp__incl.md5  be__nullptr_8hpp_source.html  be__within_8hpp_source.html  classCppSpec_1_1ClassDescription-members.html  classCppSpec_1_1ClassDescription.html  classCppSpec_1_1ClassDescription.js  classCppSpec_1_1ClassDescription__coll__graph.map  classCppSpec_1_1ClassDescription__coll__graph.md5  classCppSpec_1_1Description-members.html  classCppSpec_1_1Description.html  classCppSpec_1_1Description.js  (+460 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  concepts_1.js  concepts_2.js  files_0.js  files_1.js  (+36 more)
examples/: CMakeLists.txt
examples/sample/: CMakeLists.txt  example_spec.cpp  jasmine_intro.cpp  tag_test.cpp
gh-pages/: index.md
gh-pages/_includes/: navigation.html
gh-pages/assets/css/: style.css
include/: argparse.hpp  child.hpp  class_description.hpp  cppspec.hpp  description.hpp  it.hpp  it_base.hpp  let.hpp  printer.hpp  printer_base.hpp  result.hpp  runnable.hpp  runner.hpp  util.hpp  util_snippet.hpp
include/expectations/: expectation.hpp  fail_with.hpp  handler.hpp
include/formatters/: formatters_base.hpp  junit_xml.hpp  progress.hpp  tap.hpp  term_colors.hpp  verbose.hpp
include/matchers/: basematcher.hpp  be.hpp  be_between.hpp  be_greater_than.hpp  be_less_than.hpp  be_nullptr.hpp  be_within.hpp  contain.hpp  end_with.hpp  equal.hpp  fail.hpp  include.hpp  match.hpp  matcher_base.hpp  pretty_matchers.hpp  satisfy.hpp  start_with.hpp  throw.hpp
include/matchers/errors/: fail.hpp  have_error.hpp  have_value.hpp  throw.hpp
include/matchers/numeric/: be_between.hpp  be_greater_than.hpp  be_less_than.hpp  be_within.hpp
include/matchers/strings/: end_with.hpp  match.hpp  start_with.hpp
spec/: CMakeLists.txt  context_spec.cpp  describe_a_advanced_spec.cpp  describe_a_spec.cpp  describe_spec.cpp  dsl_spec.cpp  let_spec.cpp  lifecycle_spec.cpp  runner.cpp
spec/expectations/: expectation_spec.cpp
spec/matchers/: be_between_spec.cpp  be_between_spec.hpp  be_within_spec.cpp  be_within_spec.hpp  contain_spec.cpp  equal_spec.cpp  expected_spec.cpp  null_spec.cpp  numeric_spec.cpp  satisfy_spec.cpp  string_spec.cpp  throw_spec.cpp  unhandled_exception_spec.cpp
